Add other speed ups to lein startup times draft